force-app/main/default/objects/AcctPlanWalletOtherBank__c/AcctPlanWalletOtherBank__c.object-meta.xml
<CustomObject>
    <label>Account Plan Wallet Other Bank</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plan Wallet Other Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan Wallet Other Bank</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>