force-app/main/default/objects/AcctPlanWalletOtherBank__c/fields/SharedBank4__c.field-meta.xml
<CustomField>
    <fullName>SharedBank4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SharedBank4</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Account Plan Wallet Other Bank (SharedBank4)</relationshipLabel>
    <relationshipName>Account_Plan_Wallet_Other_Bank4</relationshipName>
    <type>Lookup</type>
</CustomField>