force-app/main/default/objects/AcctPlanWalletOtherBank__c/fields/TableName__c.field-meta.xml
<CustomField>
    <fullName>TableName__c</fullName>
    <description>CollectionDomestic,
CollectionExport,
PaymentDomestic,
PaymentImport,
DepositDomestic,
DepositInternational</description>
    <label>TableName</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collection Method Domestic</fullName>
            </value>
            <value>
                <fullName>Collection Method Export</fullName>
            </value>
            <value>
                <fullName>Payment Method Domestic</fullName>
            </value>
            <value>
                <fullName>Payment Method Import</fullName>
            </value>
            <value>
                <fullName>Deposit Domestic</fullName>
            </value>
            <value>
                <fullName>Deposit International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>